--- a/Introduction /css/style.css
+++ b/Introduction /css/style.css
@@ -3,8 +3,8 @@
 @import "font-properties.css";
 
 .main{
- width: 1200px;
- height: 1000px;
+ width: 100%;
+ height: 100%;
  padding: 10px;
  background: beige;
 }
