--- a/Introduction /css/font-properties.css
+++ b/Introduction /css/font-properties.css
@@ -167,7 +167,6 @@
 **/ 
 
 
-
 #background-color{
 
     background-color: silver;
@@ -178,11 +177,46 @@
      width: 1000px;
      height: 200px;
      background-image: url('../images/133.gif');
-    background-repeat: no-repeat;
+     background-repeat: no-repeat;
+}
+#background-attachment{
+    padding: 70px;
+    height: 200px;
+    width: 250px;
+    background-image: url("../images/133.gif");
+    overflow: auto;
+    background-attachment: fixed;
 }
 
 
 
+
+#border-style-solid{
+    border-style: solid;
+    width: 100px;
+    height: 100px;
+}
+
+#border-style-dotted{
+    border-style: dotted;
+    width: 100px;
+    height: 100px;
+}
+#border-style-dashed{
+    border-style: dashed;
+    width: 100px;
+    height: 100px;
+}
+#border-style-double{
+    border-style: double;
+    width: 100px;
+    height: 100px;
+}
+#border-style-groove{
+    border-style: groove;
+    width: 100px;
+    height: 100px;
+}
 
 
 
